# daftari

./: .gitignore  .mcpbignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  biome.json  manifest.json  package-lock.json  package.json  server.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: auto-merge.yml  ci.yml  claude-code-review.yml  claude.yml  nightly-maintenance.yml  pages.yml  release.yml  security-review.yml  workflow.yml
benchmarks/tension-graph/: README.md  agent.py  feud_corpus.py  feud_metrics.py  feud_queries.py  phase2_build_contexts.ts  phase2_export.py  run_feud.py  (+4 more)
docs/: 2026-07-01-security-efficiency-audit.md  anthropic-directory-listing.md  architecture.md  curation-workflow.md  file-format.md  getting-started.md  manifesto.md  multi-vault-howto.md  positioning-2026-07.md  reviewer-guide.md  schema-extensions.md  worked-example.md
integrations/langchain/: .gitignore  README.md  pyproject.toml
integrations/langchain/examples/: demo_research_agent.py
integrations/langchain/src/langchain_daftari/: __init__.py  client.py  response.py  tools.py
integrations/langchain/tests/: conftest.py  test_client.py  test_integration.py  test_response.py  test_tools.py
notes/: tension-graph-benchmark-spec.md
scripts/: cb6-gate-negative-controls.mjs  gen-regression-vault.mjs  pack-mcpb.mjs  regression-update-baseline.mjs  run-decorrelation-openrouter.mjs
site/: CNAME  index.html
src/: cli.ts  index.ts  server.ts
templates/: config.yaml
test/: back-compat-extensions.test.ts  cli.test.ts  server.test.ts
(+804 files in other folders)
